--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+h6 {
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #8C7F68;
+}
+
 ul {
     list-style: none;
     display: flex;
@@ -5,4 +11,33 @@ ul {
 
 li {
     margin-left: 1rem;
+}
+
+a {
+    box-shadow: inset 0 0 0 0 #0597F2;
+    color: #0597F2;
+    padding: 0 .25rem;
+    margin: 0 -.25rem;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+
+a:hover {
+    color: rgb(200, 249, 5);
+    box-shadow: inset 200px 0 0 0 #0597F2;
+    ;
+}
+
+a {
+    color: #0597F2;
+    line-height: 1.5;
+    text-decoration: none;
+}
+
+/* Color Theme Swatches in Hex */
+.hex {
+    color: #0420BF;
+    color: #0597F2;
+    color: #0CB1F2;
+    color: #8C7F68;
+    color: #D9D9D9;
 }
