--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,21 @@ a {
     text-decoration: none;
 }
 
+/* Larger than mobile */
+@media (min-width: 400px) {}
+
+/* Larger than phablet (also point when grid becomes active) */
+@media (min-width: 550px) {}
+
+/* Larger than tablet */
+@media (min-width: 750px) {}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {}
+
 /* Color Theme Swatches in Hex */
 .hex {
     color: #0420BF;
