--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,45 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+body {
+    font-weight: 500;
+}
+
 h6 {
     font-size: 1.2rem;
-    font-weight: 400;
     color: #8C7F68;
 }
 
-ul {
+nav {
+    text-align: center;
+    border-top: 9px solid #8C7F68;
+    padding-top: 5px;
+}
+
+#nav-bar ul {
     list-style: none;
     display: flex;
 }
 
-li {
+#nav-bar li {
     margin-left: 1rem;
 }
 
 a {
-    box-shadow: inset 0 0 0 0 #0597F2;
-    color: #0597F2;
+    box-shadow: inset 0 0 0 0 #0420BF;
+    color: #0420BF;
     padding: 0 .25rem;
     margin: 0 -.25rem;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 
 a:hover {
-    color: rgb(200, 249, 5);
-    box-shadow: inset 200px 0 0 0 #0597F2;
-    ;
+    color: #0DF905;
+    box-shadow: inset 500px 0 0 0 #0420BF;
+    font-weight: 600;
 }
 
 a {
@@ -33,26 +48,13 @@ a {
     text-decoration: none;
 }
 
-/* Larger than mobile */
-@media (min-width: 400px) {}
-
-/* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
-
-/* Larger than tablet */
-@media (min-width: 750px) {}
-
-/* Larger than desktop */
-@media (min-width: 1000px) {}
-
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {}
-
-/* Color Theme Swatches in Hex */
-.hex {
-    color: #0420BF;
-    color: #0597F2;
-    color: #0CB1F2;
+code {
+    border-color: #8C7F68;
     color: #8C7F68;
-    color: #D9D9D9;
+}
+
+#box {
+    background-color: #F5F6F7;
+    padding: 2rem;
+    box-shadow: 0 2px 3px 1px #D9D9D9;
 }
